@@ -702,6 +702,9 @@ enum e_optcode {
 #ifdef SO_RCVLOWAT
    OPT_SO_RCVLOWAT,
 #endif
+#ifdef SO_RCVTIMEO
+   OPT_SO_RCVTIMEO,
+#endif
    OPT_SO_REUSEADDR,
 #ifdef SO_REUSEPORT
    OPT_SO_REUSEPORT,
@@ -719,6 +722,9 @@ enum e_optcode {
    OPT_SO_SNDBUF_LATE,
 #ifdef SO_SNDLOWAT
    OPT_SO_SNDLOWAT,
+#endif
+#ifdef SO_SNDTIMEO
+   OPT_SO_SNDTIMEO,
 #endif
    OPT_SO_TIMESTAMP,	/* Linux */
    OPT_SO_TYPE,
